# goit_web_hw_08

./: .gitignore  README.md  pyproject.toml  requirements.txt
mongo_hw/: base_creator.py  example.env  finder.py  models.py  quotes.json
rabbit_hw/: compose.yaml  consumer.py  example.env  model.py  models.py  mongoconnect.py  producer.py
